# django-tutorial

./: README.md  pyproject.toml
event/: models.py  urls.py  views.py
event/migrations/: 0001_initial.py
event/templates/event/: index.html
event2/: admin.py  apps.py  models.py  urls.py  views.py
event2/migrations/: 0001_initial.py  0002_rename_event2_text_event2_title.py  0003_event2_date.py
event2/static/event2/: style.css
event2/templates/event2/: index.html  list.html
mysite/: settings.py  urls.py
polls/: 0001_initial.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/admin/: base_site.html
polls/templates/polls/: detail.html
todo/: models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: list.html
todo2/: models.py  urls.py  views.py
todo2/migrations/: 0001_initial.py  0002_rename_todo_todo2_rename_todo_text_todo2_title.py
todo2/templates/todo2/: index.html  login.html  signup.html
todo3/: apps.py  models.py  views.py
todo3/migrations/: 0001_initial.py
