[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["kenken20081208 <pingyej363@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
mysqlclient = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
